--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-body {
+.container {
     margin: 0;
     padding: 0;
 }
@@ -187,4 +187,137 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+.icon-hamburger {
+    --btn-hamburger: var(--fg-clr-white);
+
+    width: 20px;
+    object-fit: cover;
+    z-index: 9999;
+
+}
+
+.icon-hamburger .line {
+    /* Morph hamburger button to open/close states */
+    transition:
+        rotate 200ms 0ms ease-in,
+        transform 200ms 200ms ease-in,
+        opacity 0ms 200ms;
+
+    transform-origin: center;
+}
+
+.icon-hamburger.morphToClose .line {
+    transition:
+        rotate 200ms ease-in 200ms,
+        transform 200ms ease-in,
+        opacity 0ms 200ms;
+
+    transform-origin: center;
+}
+
+.icon-hamburger.morphToClose .top {
+    transform: translateY(20px);
+    rotate: 45deg;
+}
+
+.icon-hamburger.morphToClose .middle {
+    opacity: 0;
+}
+
+.icon-hamburger.morphToClose .bottom {
+    transform: translateY(-20px);
+    rotate: -45deg;
+}
+
+
+/* link styling */
+.mobile-link {
+    color: white;
+    text-decoration: none;
+    cursor: grab;
+}
+
+.mobile-link:visited {
+    color: white;
+
+}
+
+
+
+
+@media (max-width:680px) {
+
+    /* Mobile view */
+    .mobile-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 2em;
+        background: darkblue;
+        padding-inline: .5rem;
+        z-index: 99;
+        position: sticky;
+        top: 0;
+    }
+
+    .main-header {
+        display: none;
+    }
+
+    .mobile-menu__title {
+        color: white;
+    }
+
+    .primary-navigation {
+        position: fixed;
+        inset: 35px 0 0 10%;
+        background: rgb(255, 255, 255);
+        padding: min(5vh, 10rem);
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
+    .mobile-portfolio-link {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .primary-navigation.open {
+        transform: translateX(0%);
+    }
+
+    .btn-hamburger {
+        display: flex;
+        background: transparent;
+        border: 0;
+
+    }
+
+    .main-content {
+        padding: 20px;
+        list-style: none;
+        width: 90%;
+        margin-inline: auto;
+    }
+
+    .nav-link {
+        width: fit-content;
+        padding: 10px;
+        color: black;
+        background-color: blue;
+        border-radius: 20px;
+        margin: 20px;
+    }
+
 }
