--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.container {
     margin: 0;
     padding: 0;
+}
+
+
+*:active>* {
+    outline: 1px dotted red;
 }
 
 .header {
@@ -22,6 +24,8 @@
     position: sticky;
     top: 0;
     z-index: 99;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .hero-banner {
@@ -47,18 +51,29 @@
     text-shadow: 2px 2px 2px black;
 }
 
-.buy-now {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 18px;
-    color: #fff;
+.get-started {
     background: linear-gradient(to bottom, #4e89ae, #2b5876);
-    border-radius: 20px;
-    text-decoration: none;
     transition: background 0.3s ease-in-out;
+    width: 200px;
+    padding: 20px;
+    border-radius: 5px;
 }
 
-.buy-now:hover {
+.button {
+    display: block;
+    text-decoration: none;
+}
+
+.button-text {
+    color: white;
+    font-weight: bolder;
+    margin: 0;
+    text-align: center;
+
+}
+
+
+.get-started:hover {
     background: linear-gradient(to bottom, #2b5876, #4e89ae);
 }
 
@@ -71,7 +86,8 @@
 .main-content {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 50px;
+    margin-top: 100px;
 }
 
 
@@ -107,29 +123,20 @@
     font-size: larger;
 }
 
+
+
 .header-text {
     color: white;
 
 }
 
 
-.footer {
-    margin-top: 100px;
-}
 
-.footer-links {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    list-style-type: none;
+.sub-title {
+    vertical-align: top;
 }
 
 
-.footer-link {
-    text-decoration: none;
-}
 
 .inline-image {
     max-width: 100px;
@@ -138,20 +145,38 @@
 
 
 
-.coatings,
-.drain,
-.no-slipups,
-.locations {
+
+.inline {
+    text-align: center;
+    max-width: 80%;
+
+}
+
+.inline-link {
     background-color: lightgreen;
-    width: 100%;
-    max-width: 300px;
+    width: 300px;
+    height: 230px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
     padding: 5px;
+    text-decoration: none;
 }
+
+
+.inline-link:hover {
+    background-color: aqua;
+
+    transition: background-color 0.3s ease-in-out;
+
+}
+
+
+
+
+
 
 .div-text {
     font-size: large;
@@ -173,6 +198,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 
 }
 
@@ -187,11 +213,6 @@
 /* använd idn i html för tex buy a bathtub */
 
 
-.inline-link {
-    text-decoration: none;
-    text-align: center;
-    max-width: 80%;
-}
 
 
 
@@ -252,6 +273,97 @@
 .mobile-link:visited {
     color: white;
 
+}
+
+.main-footer {
+    margin-top: 50px;
+    background-color: darkblue;
+    color: #fff;
+    padding: 40px 0;
+}
+
+.main-footer h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.main-footer p {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 20px;
+}
+
+.main-footer ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.main-footer ul li {
+    margin-bottom: 10px;
+}
+
+.main-footer ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+.main-footer ul li a:hover {
+    color: #ffc107;
+}
+
+.bottom-footer {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.shop-bathtub {
+
+    background-color: #f1f1f1;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.bathtub-section-image {
+    max-width: 1200px;
+    border-radius: 5px;
+}
+
+.bathtub-image {
+    margin-right: 200px;
+}
+
+.shop-bathtub-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 200px;
+    align-items: center;
+    width: fit-content;
+    gap: 20px;
+
+}
+
+.line {
+    display: block;
+    border-bottom: 1px solid black;
+    height: 1px;
+    margin: 10px 0;
+
+}
+
+
+.shop-title {
+    font-size: 30px;
+    font-weight: 200;
 }
 
 
@@ -326,15 +438,4 @@
         margin: 20px;
     }
 
-}
-
-
-.swiper {
-    width: 80%;
-    height: fit-content;
-    z-index: 9999999;
-}
-
-.swiper-slide img {
-    width: 100%;
 }
