--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@
 }
 
 
-.uglytub {
+.uglytub-div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -214,13 +214,6 @@
 
 
 
-.choices {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 150px;
-}
 
 .mobile-menu {
     display: none;
@@ -272,14 +265,19 @@
 
 }
 
-.shop-bathtub {
+.bathtub-section {
     background-color: #f1f1f1;
+}
+
+
+.bathtub-container {
     width: 100%;
     height: fit-content;
     display: flex;
     justify-content: space-between;
     padding-bottom: 20px;
     padding-top: 20px;
+
 }
 
 .bathtub-section-image {
