--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -254,26 +255,20 @@
     width: 100%;
     height: fit-content;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-bottom: 20px;
     padding-top: 20px;
-
 }
 
 .bathtub-section-image {
-    max-width: 1000px;
+    width: min(100% - 50px, 1000px);
     border-radius: 5px;
-}
-
-.bathtub-image {
-    margin-right: 200px;
 }
 
 .shop-bathtub-items {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 200px;
     align-items: center;
     width: fit-content;
     gap: 30px;
@@ -390,9 +385,95 @@ ul li:last-child {
     gap: 10px;
 }
 
-@media (max-width:680px) {
+
+/* fråga johan om jag borde ha hamburgar menyn i tablet view osv */
+@media (max-width:769px) {
 
     /* Mobile view */
+    .mobile-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 2em;
+        background: darkblue;
+        padding-inline: .5rem;
+        z-index: 99;
+        position: sticky;
+        top: 0;
+    }
+
+
+    .main-header {
+        display: none;
+    }
+
+    .mobile-menu__title {
+        color: white;
+    }
+
+    .primary-navigation {
+        position: fixed;
+        inset: 35px 0 0 10%;
+        background: rgb(255, 255, 255);
+        padding: min(5vh, 10rem);
+        transform: translateX(100%);
+        transition: transform 250ms ease-in-out;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
+    .mobile-portfolio-link {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .primary-navigation.open {
+        transform: translateX(0%);
+    }
+
+    .btn-hamburger {
+        display: flex;
+        background: transparent;
+        border: 0;
+    }
+
+    .main-content {
+        padding: 20px;
+        list-style: none;
+        width: 90%;
+        margin-inline: auto;
+    }
+
+    .nav-link {
+        width: fit-content;
+        padding: 10px;
+        color: rgb(0, 0, 0);
+        background-color: blue;
+        border-radius: 20px;
+        margin: 20px;
+    }
+
+    .bathtub-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .bathtub-image {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    .bathtub-section-image {
+        max-width: 500px;
+    }
+}
+
+@media (min-width: 770px) and (max-width: 1300px) {
     .mobile-menu {
         display: flex;
         justify-content: space-between;
@@ -460,12 +541,20 @@ ul li:last-child {
         margin: 20px;
     }
 
+    .bathtub-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .bathtub-image {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
     .bathtub-section-image {
         max-width: 500px;
     }
 
-}
-
-@media (min-width: 681px) and (max-width: 1000px) {
-    /* CSS styles for tablets go here */
 }
