--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,29 @@
     -moz-box-shadow: 10px 10px 5px 4px rgba(137, 118, 232, 0.75);
 }
 
+.navigation:hover {
+    box-shadow: 10px 10px 5px 4px rgba(116, 215, 252, 0.75);
+    -webkit-box-shadow: 10px 10px 5px 4px rgba(116, 215, 252, 0.75);
+    -moz-box-shadow: 10px 10px 5px 4px rgba(116, 215, 252, 0.75);
+    transition: ease-in-out 0.3s;
+}
+
+
+.nav-link {
+    color: rgb(137, 118, 232);
+    font-weight: bolder;
+    text-decoration: none;
+    font-size: larger;
+    text-transform: uppercase;
+}
+
+.nav-link:hover {
+    color: rgb(116, 215, 252);
+    transition: ease-in-out 0.3s;
+}
+
+
+
 .hero-banner {
     display: flex;
     flex-direction: column;
@@ -49,12 +72,11 @@
     color: white;
     font-size: 30px;
     font-weight: bolder;
-    text-align: center;
     text-shadow: 2px 2px 2px black;
 }
 
 .get-started,
-.shop-now {
+.browse-bathtubs {
     background: linear-gradient(to bottom, #4e89ae, #2b5876);
     transition: background 0.3s ease-in-out;
     width: 200px;
@@ -77,7 +99,7 @@
 
 
 .get-started:hover,
-.shop-now:hover {
+.browse-bathtubs:hover {
     background: linear-gradient(to bottom, #2b5876, #4e89ae);
 }
 
@@ -117,56 +139,16 @@
 }
 
 
-.nav-link {
-    color: rgb(137, 118, 232);
-    font-weight: bolder;
-    text-decoration: none;
-    font-size: larger;
-    text-transform: uppercase;
-}
-
-
 
 .header-text {
-    color: white;
+    color: rgb(137, 118, 232);
+    text-transform: capitalize;
 }
 
 .sub-title {
     vertical-align: top;
 }
 
-.inline-image {
-    max-width: 100px;
-    aspect-ratio: 1;
-}
-
-.inline {
-    text-align: center;
-    max-width: 80%;
-
-}
-
-
-.inline-link {
-    background-color: lightgreen;
-    width: 300px;
-    height: 230px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 20px;
-    padding: 5px;
-    text-decoration: none;
-}
-
-
-
-.inline-link:hover {
-    background-color: aqua;
-    transition: background-color 0.3s ease-in-out;
-
-}
 
 .div-text {
     font-size: large;
@@ -270,7 +252,7 @@
 }
 
 .bathtub-section-image {
-    width: min(100% - 50px, 1000px);
+    width: min(100% - 40px, 900px);
     border-radius: 5px;
 }
 
@@ -475,12 +457,6 @@ ul li:last-child {
         flex-direction: column;
         align-items: center;
         gap: 40px;
-    }
-
-    .bathtub-image {
-        margin: 0;
-        display: flex;
-        justify-content: center;
     }
 
     .bathtub-section-image {
