--- a/styles.css
+++ b/styles.css
@@ -35,17 +35,34 @@
 }
 
 
+.navigation.sticky {
+    width: fit-content;
+    margin: auto;
+    padding: 20px;
+}
+
+
+header.sticky {
+    display: none;
+
+}
+
+.primary-navigation.sticky {
+    margin-right: 0;
+}
+
 .nav-link {
     color: rgb(137, 118, 232);
     font-weight: bolder;
     text-decoration: none;
-    font-size: larger;
+    font-size: large;
     text-transform: uppercase;
 }
 
 .nav-link:hover {
-    color: rgb(116, 215, 252);
+    font-size: larger;
     transition: ease-in-out 0.3s;
+    color: rgba(116, 215, 252, 0.75);
 }
 
 
@@ -143,7 +160,9 @@
 
 .header-text {
     color: rgb(137, 118, 232);
-    text-transform: capitalize;
+    text-transform: uppercase;
+    font-size: large;
+
 }
 
 .sub-title {
@@ -158,6 +177,7 @@
 .my-text {
     color: darkblue;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .my-text:hover {
@@ -234,7 +254,7 @@
 }
 
 .mobile-link:visited {
-    color: white;
+    color: black;
 
 }
 
@@ -337,6 +357,7 @@ ul li:last-child {
 
 .services-paragraph {
     text-align: center;
+    color: darkgrey;
 }
 
 .services-image {
@@ -350,7 +371,7 @@ ul li:last-child {
     width: auto;
     gap: 100px;
     flex-wrap: wrap;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 .horizontal-line {
