--- a/styles.css
+++ b/styles.css
@@ -68,37 +68,28 @@ header.scroll {
 }
 
 
-
-/* Här behöver jag ha samma kod två gånger och kan inte lägga in dem med "," på samma rad för att sedan bara lägga in "hero-banner-browse" bilden på en separat tag */
 .hero-banner {
-    display: flex;
-    flex-direction: column;
     background: url(/images/hero-banner-v2.jpeg);
-    background-position: center 80%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
-
 }
 
+.hero-banner-browse {
+    background: url(/images/hero-banner-browse.jpg);
+}
 
+.hero-banner,
 .hero-banner-browse {
     display: flex;
     flex-direction: column;
-    background: url(/images/hero-banner-browse.jpg);
-    background-position: center 80%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     width: 100%;
     gap: 30px;
-    justify-content: center;
-    align-items: center;
+    background-position: center 80%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 
 
 .hero-banner-text {
@@ -110,6 +101,10 @@ header.scroll {
     font-weight: bolder;
     text-shadow: 2px 2px 2px black;
     text-align: center;
+}
+
+.hero-banner-browse {
+    text-transform: capitalize;
 }
 
 .get-started,
@@ -129,7 +124,6 @@ header.scroll {
 .button-text {
     color: white;
     font-weight: bolder;
-    margin: 0;
     text-align: center;
 
 }
@@ -151,6 +145,7 @@ header.scroll {
     flex-direction: column;
     gap: 50px;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .logo {
@@ -315,11 +310,8 @@ ul li:last-child {
 
 .services-containers {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     width: auto;
-    gap: 100px;
-    flex-wrap: wrap;
-    margin-bottom: 80px;
 }
 
 .horizontal-line {
@@ -356,7 +348,6 @@ ul li:last-child {
     font-weight: 200;
 }
 
-/* Menu */
 
 /* Nav menu button */
 
@@ -365,70 +356,53 @@ ul li:last-child {
 
 }
 
+.browse-parent {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.browse-text {
+    display: flex;
+    justify-content: center;
+}
+
+.browse-grid {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+
+}
+
+.browse-container {
+    background-color: #4e89ae;
+    max-width: 300px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.browse-image {
+    border-radius: 5px;
+    width: min(80% - 40px, 700px);
+}
+
+
+
+
+
 @media (max-width:769px) {
     .nav-menu {
         display: flex;
         justify-content: right;
         position: sticky;
         top: 0;
-        /*lägg till backroundsfärg */
+        background-color: white;
     }
 
 
     /* Nav menu button */
-    .toggle-container {
-        position: relative;
-        padding: 10px 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        cursor: pointer;
-        z-index: 1;
-        box-shadow: 0 0 0 0 rgb(255 255 255);
-        border-radius: 100%;
-        transition: transform 300ms, box-shadow 1000ms;
-    }
-
-    .toggle-container .line {
-        width: 32px;
-        height: 3px;
-        background-color: #373737;
-        display: block;
-        margin: 3px 0;
-        border-radius: 5px;
-        -webkit-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(1) {
-        -webkit-transform: translateY(5px) rotate(45deg);
-        -ms-transform: translateY(13px) rotate(45deg);
-        -o-transform: translateY(13px) rotate(45deg);
-        transform: translateY(5px) rotate(45deg);
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(3) {
-        opacity: 0;
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(2) {
-        -webkit-transform: translateY(-5px) rotate(-45deg);
-        -ms-transform: translateY(-13px) rotate(-45deg);
-        -o-transform: translateY(-13px) rotate(-45deg);
-        transform: translateY(-4px) rotate(-45deg);
-        width: 32px;
-    }
-
-    #toggle:checked~nav {
-        transform: translateX(0);
-        opacity: 1;
-    }
-
-    #toggle:checked~.toggle-container .header-button-icon {
-        transform: rotate(180deg);
-    }
-
     nav {
         transform: translateX(100%);
         opacity: 0;
@@ -526,44 +500,6 @@ ul li:last-child {
         transform: rotate(180deg);
     }
 
-    nav {
-        transform: translateX(100%);
-        opacity: 0;
-        transition: 300ms;
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 260px;
-        height: 100vh;
-        background-color: #fff;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    }
-
-    .nav-list {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        margin-top: 70px;
-    }
-
-    .nav-item {
-        display: flex;
-    }
-
-    .nav-item a {
-        width: 100%;
-        padding: 12px;
-        text-decoration: none;
-    }
-
-    .nav-item span {
-        font-family: sans-serif;
-        color: #575757;
-    }
-
-    .nav-item:hover {
-        background-color: #ededed;
-    }
 
     .navigation {
         display: none;
@@ -606,13 +542,14 @@ ul li:last-child {
 
 }
 
-@media (min-width: 770px) and (max-width: 1040px) {
+@media (min-width: 770px) and (max-width: 1100px) {
+
     .nav-menu {
         display: flex;
         justify-content: right;
         position: sticky;
         top: 0;
-        /*lägg till backroundsfärg */
+        background-color: white;
     }
 
 
@@ -631,103 +568,10 @@ ul li:last-child {
 
     }
 
-    .toggle-container .line {
-        width: 32px;
-        height: 3px;
-        background-color: #373737;
-        display: block;
-        margin: 3px 0;
-        border-radius: 5px;
-        -webkit-transition: all 0.3s ease-in-out;
-        -o-transition: all 0.3s ease-in-out;
-        transition: all 0.3s ease-in-out;
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(1) {
-        -webkit-transform: translateY(5px) rotate(45deg);
-        -ms-transform: translateY(13px) rotate(45deg);
-        -o-transform: translateY(13px) rotate(45deg);
-        transform: translateY(5px) rotate(45deg);
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(3) {
-        opacity: 0;
-    }
-
-    #toggle:checked~.toggle-container .line:nth-child(2) {
-        -webkit-transform: translateY(-5px) rotate(-45deg);
-        -ms-transform: translateY(-13px) rotate(-45deg);
-        -o-transform: translateY(-13px) rotate(-45deg);
-        transform: translateY(-4px) rotate(-45deg);
-        width: 32px;
-    }
-
-    #toggle:checked~nav {
-        transform: translateX(0);
-        opacity: 1;
-    }
-
-    #toggle:checked~.toggle-container .header-button-icon {
-        transform: rotate(180deg);
-    }
-
-    nav {
-        transform: translateX(100%);
-        opacity: 0;
-        transition: 300ms;
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 260px;
-        height: 100vh;
-        background-color: #fff;
-        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    }
-
-    .nav-list {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        margin-top: 70px;
-    }
-
-    .nav-item {
-        display: flex;
-    }
-
-    .nav-item a {
-        width: 100%;
-        padding: 12px;
-        text-decoration: none;
-    }
-
-    .nav-item span {
-        font-family: sans-serif;
-        color: #575757;
-    }
-
-    .nav-item:hover {
-        background-color: #ededed;
-    }
-
-    /* Nav menu button */
     #toggle {
         display: none;
     }
 
-    .toggle-container {
-        position: relative;
-        padding: 10px 5px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        cursor: pointer;
-        z-index: 1;
-        box-shadow: 0 0 0 0 rgb(255 255 255);
-        border-radius: 100%;
-        transition: transform 300ms, box-shadow 1000ms;
-    }
-
     .toggle-container .line {
         width: 32px;
         height: 3px;
@@ -806,6 +650,7 @@ ul li:last-child {
     .nav-item:hover {
         background-color: #ededed;
     }
+
 
     .navigation {
         display: none;
