--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
 }
 
-
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -163,20 +162,6 @@ header.scroll {
 
 }
 
-.sub-title {
-    vertical-align: top;
-}
-
-
-.div-text {
-    font-size: large;
-}
-
-.my-text {
-    color: darkblue;
-    font-weight: 600;
-    cursor: pointer;
-}
 
 
 .javascript-div {
@@ -340,7 +325,7 @@ ul li:last-child {
 .browse-parent {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 50px;
 }
 
 .browse-text {
@@ -357,16 +342,27 @@ ul li:last-child {
 }
 
 .browse-container {
-    background-color: #4e89ae;
-    max-width: 300px;
-    border-radius: 5px;
     display: flex;
+    flex-direction: column;
+    gap: 20px;
     justify-content: center;
+    align-items: center;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding-bottom: 10px;
 }
 
-.browse-image {
+.browse-description {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+
+.bathtub-image {
+    width: min(80% - 40px, 800px);
     border-radius: 5px;
-    width: min(80% - 40px, 700px);
 }
 
 
@@ -520,6 +516,12 @@ ul li:last-child {
         display: none;
     }
 
+    .browse-grid {
+        grid-template-columns: 1fr;
+
+    }
+
+
 
 }
 
@@ -643,9 +645,10 @@ ul li:last-child {
         gap: 40px;
     }
 
+    .browse-grid {
+        grid-template-columns: repeat(2, 1fr);
 
-
-
+    }
 
 
 
