--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ header.scroll {
 }
 
 .bathtub-section-image {
-    width: min(100% - 40px, 900px);
+    width: min(100% - 40px, 650px);
     border-radius: 5px;
 }
 
@@ -366,6 +366,50 @@ ul li:last-child {
 }
 
 
+.contact-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.contact-content {
+    flex: 1;
+    padding: 50px 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.contact-icon {
+    fill: #404452;
+    width: 30px;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.contact-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    padding: 40px;
+}
+
+.contact-value {
+    color: #6a7383;
+}
+
+.title {
+    color: #404452;
+    font-size: 30px;
+}
+
+.contact-item:first-child {
+    box-shadow: inset -1px 0 #ebeef1;
+}
 
 
 
@@ -522,7 +566,21 @@ ul li:last-child {
     }
 
 
+    .wrapper {
+        flex-direction: column;
+    }
 
+    .contact-item:first-child {
+        box-shadow: inset 0 -1px #ebeef1;
+    }
+
+    .contact-item {
+        padding: 30px 0;
+    }
+
+    .contact-content {
+        padding: 50px;
+    }
 }
 
 @media (min-width: 770px) and (max-width: 1100px) {
@@ -649,8 +707,4 @@ ul li:last-child {
         grid-template-columns: repeat(2, 1fr);
 
     }
-
-
-
-
 }
